# FastAPI_Proj

./: .env  .gitignore  db.py  main.py  pyproject.toml
app/: app.py  models.py  schemas.py
